<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/appCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp">

        <RelativeLayout
            android:id="@+id/appContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp">

            <ImageView
                android:id="@+id/appIcon"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_marginEnd="16dp"
                android:scaleType="fitXY"
                android:src="@mipmap/ic_launcher" />

            <RelativeLayout
                android:id="@+id/textWrapper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/appIcon">

                <TextView
                    android:id="@+id/appName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_toStartOf="@id/multiSelect"
                    android:singleLine="false"
                    android:text="@string/loading"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/packageName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/appName"
                    android:layout_marginBottom="8dp"
                    android:layout_toStartOf="@id/multiSelect"
                    android:alpha=".54"
                    android:text="@string/loading"
                    android:textSize="12sp" />

                <CheckBox
                    android:id="@+id/multiSelect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true" />
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/profileContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/appContent">

            <com.github.florent37.expansionpanel.ExpansionHeader
                android:id="@+id/profileHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:paddingEnd="16dp"
                app:expansion_headerIndicator="@id/headerIndicator"
                app:expansion_layout="@id/expansionLayout"
                app:expansion_toggleOnClick="true">

                <ImageView
                    android:id="@+id/headerIndicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginEnd="4dp"
                    android:adjustViewBounds="true"
                    app:srcCompat="@drawable/ic_expansion_header_indicator_grey_24dp" />

                <TextView
                    android:id="@+id/currentProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loading"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </com.github.florent37.expansionpanel.ExpansionHeader>

            <com.github.florent37.expansionpanel.ExpansionLayout
                android:id="@+id/expansionLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/profileHeader"
                app:expansion_expanded="false">

                <RadioGroup
                    android:id="@+id/profilesRadioGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp">

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/batteryRadio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_battery" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/balancedRadio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_balanced" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/performanceRadio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_performance" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/whitelistRadio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_whitelist" />
                </RadioGroup>
            </com.github.florent37.expansionpanel.ExpansionLayout>
        </RelativeLayout>
    </RelativeLayout>
</com.google.android.material.card.MaterialCardView>