<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AppEngineFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/text_battery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/balanced_fab"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="14dp"
        android:layout_toStartOf="@+id/battery_fab"
        android:visibility="invisible"
        app:cardElevation="8dp">

        <TextView
            android:id="@+id/battery_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:alpha=".54"
            android:text="@string/profile_battery"
            android:textSize="16sp" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/battery_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/balanced_fab"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="12dp"
        android:clickable="true"
        android:focusable="true"
        android:visibility="invisible"
        app:fabSize="mini"
        app:srcCompat="@drawable/outline_battery_20_24" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/text_balanced"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/performance_fab"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="14dp"
        android:layout_toStartOf="@+id/balanced_fab"
        android:visibility="invisible"
        app:cardElevation="8dp">

        <TextView
            android:id="@+id/balanced_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:alpha=".54"
            android:text="@string/profile_balanced"
            android:textSize="16sp" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/balanced_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/performance_fab"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="12dp"
        android:clickable="true"
        android:focusable="true"
        android:visibility="invisible"
        app:fabSize="mini"
        app:srcCompat="@drawable/outline_battery_50_24" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/text_performance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/whitelist_fab"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="14dp"
        android:layout_toStartOf="@+id/performance_fab"
        android:visibility="invisible"
        app:cardElevation="8dp">

        <TextView
            android:id="@+id/performance_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:alpha=".54"
            android:text="@string/profile_performance"
            android:textSize="16sp" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/performance_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/whitelist_fab"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="12dp"
        android:clickable="true"
        android:focusable="true"
        android:visibility="invisible"
        app:fabSize="mini"
        app:srcCompat="@drawable/outline_battery_charging_full_24" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/text_whitelist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/profiles_fab"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="22dp"
        android:layout_toStartOf="@+id/whitelist_fab"
        android:visibility="invisible"
        app:cardElevation="8dp">

        <TextView
            android:id="@+id/whitelist_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:alpha=".54"
            android:text="@string/profile_whitelist"
            android:textSize="16sp" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/whitelist_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/profiles_fab"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:focusable="true"
        android:visibility="invisible"
        app:fabSize="mini"
        app:srcCompat="@drawable/outline_block_24" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/profiles_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:focusable="true"
        android:visibility="invisible"
        app:fabSize="normal"
        app:srcCompat="@drawable/outline_add_24" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swiperefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</RelativeLayout>